--- a/package.json
+++ b/package.json
@@ -16,8 +16,14 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@eslint/compat": "^1.0.1",
+    "@eslint/js": "^9.3.0",
     "@types/react": "~18.2.45",
-    "typescript": "^5.1.3"
+    "eslint": "^8.57.0",
+    "eslint-plugin-react": "^7.34.1",
+    "globals": "^15.3.0",
+    "typescript": "^5.1.3",
+    "typescript-eslint": "^7.10.0"
   },
   "private": true
 }
